scrollbar fix

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -52,6 +52,7 @@
 
 html {
     height: auto;
+    overflow: hidden; //only if nicescroll plugin is in use (default enabled)
 }
 body {
     position: relative;
